--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,20 +27,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  azlistview:
+    git:
+      url: https://github.com/BlazL/azlistview.git
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  installed_apps: ^1.3.1
+  intl: ^0.17.0
+  page_transition: null
+  status_bar_control: null
+  timer_builder: ^2.0.0
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  status_bar_control:
-  async_wallpaper: ^1.0.1
-  page_transition:
-  
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -48,10 +47,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -64,13 +64,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -82,8 +79,5 @@ flutter:
         - asset: fonts/sf-ui-display-light-58646b33e0551.otf
         - asset: fonts/sf-ui-display-medium-58646be638f96.otf
         - asset: fonts/sf-ui-display-thin-58646e9b26e8b.otf
-          
-   
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
