--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,16 +36,13 @@ dependencies:
   installed_apps: ^1.3.1
   intl: ^0.17.0
   page_transition: null
+  scrollable_positioned_list: ^0.3.2
   status_bar_control: null
   timer_builder: ^2.0.0
+  battery_plus: ^2.1.4
+  battery_indicator: ^0.1.1
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
