--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   status_bar_control: null
   timer_builder: ^2.0.0
   battery_indicator: ^0.1.1
+  lecle_system_shortcuts: ^0.0.1
   
  
 
